--- a/index.css
+++ b/index.css
@@ -1,153 +1,183 @@
-*{
-    margin: 0;
-    padding: 0;
-    
-}
-.cabeza{
-    background: rgb(3, 3, 46);
-    height: 30rem;
-    color: azure;
-    padding-left: 7rem;
-    padding-right: 7rem;
-    
-}
-.texmenu{
-    display: flex;
-    align-items: baseline;
-}
-    
-.menu{
-    margin-left: 1rem;
-    margin-top: 1.5rem;
-    
-}
-.links{
-    flex: 1 1 auto;
-    margin-right: 5rem;
-}
-    h3{
-        margin-right: 3rem;
-    }
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@200;400&family=Roboto+Mono&display=swap');
 
+
+/* cabecera */
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+header{
+  background-color: #1f2937;
+  color: aliceblue;
+  height: 600px;
+  
+}
+.texmenu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+h2{
+  margin-left: 20vh;
+}
+.links {
+  display: flex;
+  gap: 160px;
+  margin-right: 20vh;
+}
+a {
+  color: black;
+  text-decoration: none;
+  color: aliceblue;
+}
+.text-descripcion{
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  width: 400px;
+  height: 200px;
+  margin-top: 25px;
+  margin-left: 20vh;
+  align-items: flex-start;
+}
+.text-descripcion h1{
+  font-size: 8vh;
+}
+.text-descripcion p{
+  position: relative;
+  bottom: 60px;
+}
+.text-descripcion .button {
+  position: absolute;
+  top: 490px;
+  box-sizing: border-box;
+  background-color: #3882f6;
+  border-radius: 0px;
+  padding: 16px;
+  font-size: 21px;
+  color: white;
+  border-radius: 13px;
+}
 .recuadro{
-    display: flex;
-    height: 250px;
-    width: 700px;
-    margin-top: 8rem;
-    margin-left: 30rem;
-    background-color: rgb(113, 113, 113);
+  width: 800px;
+  height: 254px;
+  background-color: gray;
+  position: relative;
+  bottom: 128px;
+  left: 946px;
 }
-.centro{
-    height: 20rem;
-}
-.title-i{
-    display: flex;
-    justify-content: center;
-    margin-top: 1rem;
+/* parte media */
+/* .centro{
+  display: flex;
+  flex-direction: column;
+} */
+.title-1{
+  text-align: center;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 35px;
 }
 .cuadrados{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 40px;
+  display: flex;
+  flex-direction: row;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  
 }
-    
-.cuadros{
-    background: rgb(255, 255, 255);
-    margin: 10px;
-    margin-top: 2rem;
-    height: 150px;
-    width: 150px;
-    border: rgb(2, 11, 255) 3px solid;
-    border-radius: 5px;
-    flex-direction: column;
-    flex-wrap: wrap;
+.cuadros {
+display: flex;
+  width: 250px;
+  height: 250px;
+  border: 3.5px #3882f6 solid;
+  border-radius: 10px;
+  margin-left: 170px;
+  margin-bottom: 40px;
 }
-.cuadro1{
-    text-align: center;
-}
-.p-cuadro1{
-    margin-left: 12px;
-    width: 140px;
-    justify-content: center;
+.p-cuadro{
+  display: flex;
+  flex-direction: column;
+  width: 155px;
+  height: auto;
+  flex-wrap: wrap;
+  margin-left: 210px;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
 }
 
-.descripcion{
-    display: flex;
-    
-}
-.tex-descripcion{
-    flex-direction: column;
-    margin-top: 8rem;
-    width: 400px;
-}
-    .tex-descripcion h1{
-        font-size: 48px;
-    }
-    .tex-descripcion p{
-        font-size: 20px;
-    }
-    .button{
-        background-color: #3882f6;
-        color: aliceblue;
-        padding: 5px;
-        padding-left: 1.5rem;
-        padding-right: 1.5rem;
-        border-radius: 6px;
-    }
-.antepenultima{
-    background: rgb(227, 226, 226);
-    height: 250px;
-    display: flex;
-    padding: 25px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+/* zona gris */
+
+.zonagris{
+  background-color: #e5e7eb;
+  position: relative;
+  bottom: 75px;
+  height: 200px;
 }
 .texto{
-    width: 500px;
-    font-size: 1.2rem;
-    justify-items: end;
+  width: 700px;
+  height: 100px;
+  position: absolute;
+  top: 40px;
+}
+.texto-1{
+  position: absolute;
+  right: 370px;
 }
 .texto-2{
-    justify-content: end;
+  text-align: right;
+  position: relative;
+  left: 808px;
+  top: 129px;
 }
+/* penultima */
 .penultima{
-    padding: 45px;
-    display: flex;
-    
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  position: relative;
+  bottom: 52px;
 }
-.blue{
-    
-    background-color: rgb(100, 100, 245);
-    color: aliceblue;
-    border-radius: 15px;
-    padding-right: 25px;
-    padding-left: 25px;
-    width: 500px;
-    height: 4rem;
-    display: flex;
-    flex: 1 1 auto;
-    align-items: center;
-    justify-content: flex-start;
+.blue {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color:#3882f6;
+  width: 62%;
+  border-radius: 15px;
+  box-sizing: border-box;
+  padding: 15px;
+  color: white;
+  
 }
 .escritos{
-    flex-direction: column;
-    flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  font-size: 21px;
 }
 .end-button{
-    justify-content: end;
-    width: 65px;
-    border: 1.5px whitesmoke solid;
-    color: aliceblue;
-    background-color: rgb(100, 100, 245);
-    height: 30px;
-    border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+  background-color: #3882f6;
+  color: white;
+  padding: 11px;
+  font-size: 30px;
+  border: white 1.5px solid;
+  border-radius: 10px;
+  position: relative;
+  left: 218px;
+  top: 20px;
 }
 .ultima{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgb(3, 3, 46);
-    height: 5rem;
-    color: azure;
+background-color: #1f2937;
+    color: #e5e7eb;
+    height: 100px;
+}
+.copy{
+text-align: center;
+    box-sizing: border-box;
+    position: relative;
+    top: 38%;
+    font-size: 30px;
 }
